switched data file back

--- a/config.json
+++ b/config.json
@@ -8,8 +8,8 @@
     "text": "Drew Stanley"
   },
   "text": {
-    "more": “In this network visualization, you can see nodes representing the three largest telecom companies in the middle, with each link (or “edge”) representing their contributions to each congressperson. Every other node represents a Senator or Member of the House, colored red if they voted yes ”,
-    "intro": “The three largest telecom companies in the U.S. – Verizon, Comcast, and AT&T – pump millions of lobbying dollars into Congress every year to influence legislation. In 2017, Congress voted “,
+    "more": "afafa",
+    "intro": "afaf",
     "title": "Telecom Contributions to Senators and Members of the 115th Congress"
   },
   "legend": {
