--- a/config.json
+++ b/config.json
@@ -9,7 +9,7 @@
   },
   "text": {
     "more": "afafa",
-    "intro": "afaf",
+    "intro": "",
     "title": "Telecom Contributions to Senators and Members of the 115th Congress"
   },
   "legend": {
