--- a/config.json
+++ b/config.json
@@ -9,7 +9,7 @@
   },
   "text": {
     "more": "",
-    "intro": "The three largest telecom companies in the U.S. –  Verizon, AT&T, and Comcast – pump millions of lobbying dollars into Congress every year. This visualization explores the contributions received by Senators and House Members in the 115th Congress and its relation to their votes to dismantle an important internet privacy law in 2017.",
+    "intro": "The three largest telecom companies in the U.S. –  Verizon, AT&T, and Comcast – pump millions of lobbying dollars into Congress every year. This visualization explores the contributions received by Senators and House Members in the 115th Congress, and how those contributions relate to Congress' move to dismantle an important internet privacy law in 2017 that protected consumers from having their online history sold to advertisers by internet service providers.",
     "title": "How much does the telecom industry influence congress?"
   },
   "legend": {
